# agentshroud

./: .dockerignore  .flake8  .gitallowed  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json  .pre-commit-config.yaml  .semgrep.yml  .trivyignore  ACCESS_INFO.md  AGENTS.md  ALL-SERVICES-WORKING.md  BRAND.md  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CONNECT_NOW.md  CONTINUE-2026-02-16.md  CONTINUE.md  CONTRIBUTING.md  CREDENTIAL-PROTECTION-IMPLEMENTED.md  DEPLOYMENT_STATUS.md  DEVICE_PAIRING.md  Dockerfile.secure  FINAL_CONFIGURATION.md  FIRST-TIME-SETUP.md  GMAIL-SUCCESS-SUMMARY.md  HOW_TO_CONNECT.md  ICLOUD-AUTHENTICATION-ISSUE.md  ICLOUD-NEXT-STEPS.md  ICLOUD-SERVICES-SETUP.md  ICLOUD-SUCCESS-SUMMARY.md  IMESSAGE_PERMISSION_FIX.md  LICENSE  Makefile  OPENCLAW_SETUP.md  PAIRING_INSTRUCTIONS.md  PHASE2_COMPLETE.md  PHASE3_REQUIREMENTS.md  (+78 more)
cli/: Cargo.toml
cli/src/: main.rs
gateway/: Dockerfile  README.md  __init__.py  pyproject.toml  requirements.txt  verify.sh
gateway/approval_queue/: __init__.py  enhanced_queue.py  queue.py  store.py
gateway/cli/: __init__.py  client.py  main.py
gateway/dashboard/: __init__.py  index.html  proxy_status.py
gateway/ingest_api/: __init__.py  auth.py  bot_config.py  config.py  event_bus.py  ledger.py  lifespan.py  main.py  main.py.backup.refactor  middleware.py  models.py  router.py  sanitizer.py  ssh_config.py  state.py  version_routes.py
gateway/proxy/: __init__.py  canvas_proxy.py  collaborator_responses.py  dns_blocklist.py  dns_forwarder.py  forwarder.py  http_proxy.py  llm_proxy.py  mcp_audit.py  mcp_config.py  mcp_inspector.py  mcp_permissions.py  mcp_proxy.py  pipeline.py  sidecar.py  slack_channel_bridge.py  slack_proxy.py  slack_socket_client.py  telegram_egress_notify.py  telegram_proxy.py  url_analyzer.py  web_config.py  web_content_scanner.py  web_proxy.py  webhook_receiver.py
gateway/runtime/: __init__.py  apple_engine.py  compose_generator.py  config.py  docker_engine.py  engine.py  podman_engine.py  security.py
gateway/security/: __init__.py  agent_cve_registry.py  agent_isolation.py  alert_dispatcher.py  approval_hardening.py  audit_export.py  audit_store.py  browser_security.py  canary.py  canary_tripwire.py  clamav_scanner.py  collaborator_tracker.py  config_integrity.py  consent_framework.py  context_guard.py  context_integrity.py  credential_injector.py  daily_cve_report.py  delegation.py  dns_filter.py  drift_detector.py  egress_approval.py  egress_config.py  egress_filter.py  egress_monitor.py  encoding_detector.py  encrypted_store.py  env_guard.py  falco_monitor.py  file_sandbox.py  file_sandbox.py.bak2  file_sandbox.py.bak3  file_sandbox.py.debug  git_guard.py  group_config.py  health_report.py  heuristic_classifier.py  image_verifier.py  input_normalizer.py  instruction_envelope.py  (+43 more)
gateway/soc/: __init__.py  auth.py  contributors.py  event_adapter.py  models.py  router.py  services.py  websocket.py
gateway/ssh_proxy/: __init__.py  proxy.py
gateway/tests/: __init__.py  conftest.py  test_adversarial_injection.py  (+146 more)
(+1193 files in other folders)
