[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentshroud-gateway"
version = "1.0.72"
description = "AgentShroud Gateway — security proxy for autonomous AI agents"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Isaiah Dallas Jefferson, Jr.", email = "security@agentshroud.ai"},
]
readme = "README.md"
keywords = ["ai", "security", "agent", "proxy", "governance", "llm"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/idallasjlabs/agentshroud"
Documentation = "https://github.com/idallasjlabs/agentshroud/tree/main/docs"
"Bug Tracker" = "https://github.com/idallasjlabs/agentshroud/issues"

[project.scripts]
agentshroud-soc = "gateway.cli.main:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["gateway*"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.coverage.run]
source = ["gateway"]
omit = ["gateway/tests/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 84
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
